[gd_scene load_steps=35 format=2]

[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Strip And GIF/space1_4-frames.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SpaceShooterRedux/Backgrounds/purple.png" type="Texture" id=3]
[ext_resource path="res://Nodes/BlackHole.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/Effects/star1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/UI/playerLife1_blue.png" type="Texture" id=6]
[ext_resource path="res://Nodes/scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://Nodes/scripts/Shake.gd" type="Script" id=8]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=9]
[ext_resource path="res://Nodes/HealthBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/Alone Against Enemy.ogg" type="AudioStream" id=11]
[ext_resource path="res://Nodes/scripts/MenuRect.gd" type="Script" id=12]
[ext_resource path="res://audio/start.wav" type="AudioStream" id=13]
[ext_resource path="res://demo/Pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://demo/Focus.tres" type="StyleBox" id=15]
[ext_resource path="res://demo/StarjediSpecialEdition-9Bqy.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://demo/Normal.tres" type="StyleBox" id=17]
[ext_resource path="res://BtnTheme.tres" type="DynamicFont" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "purple",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 0.368627, 0.247059, 0.419608, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.780392, 0.796078, 0.898039, 1 )
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2601, 0.204, 0.51, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.780392, 0.796078, 0.898039, 1 )
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2601, 0.204, 0.51, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.12549, 0.101961, 0.211765, 1 )
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.972549, 0.929412, 0.490196, 1 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=16]
size = 25
font_data = ExtResource( 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.85406, 1.05946 )
scale = Vector2( 1.75781, 3.16406 )
frames = SubResource( 5 )
animation = "purple"
centered = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 230, 0 )
amount = 80
lifetime = 10.0
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 225, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.56
angular_velocity = 45.0
angular_velocity_random = 0.6
scale_amount = 0.2
scale_amount_random = 0.7
color_ramp = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 180, 270 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Shake" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Shake"]

[node name="Asteroids" type="Node2D" parent="."]

[node name="BuffTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PowerUps" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureRect" parent="CanvasLayer/Control"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 29.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" parent="CanvasLayer/Control" instance=ExtResource( 10 )]
margin_left = 0.0498888
margin_top = 40.0
margin_right = 146.05
margin_bottom = 59.0

[node name="Button" type="Button" parent="CanvasLayer/Control"]
pause_mode = 2
margin_left = 372.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 36.0
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="Label" parent="CanvasLayer/Control"]
margin_top = 32.0
margin_right = 447.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "point"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_top = 60.0
margin_right = 42.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 9 )
text = "font"
align = 1
valign = 1

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuRect" type="ColorRect" parent="CanvasLayer/Control2"]
pause_mode = 2
visible = false
margin_right = 450.0
margin_bottom = 800.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 0.537255 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control2/MenuRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.5
margin_top = 93.0
margin_right = 147.5
margin_bottom = 206.0
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_fonts/font = SubResource( 10 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/MenuRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.5
margin_top = -127.0
margin_right = 119.5
margin_bottom = 127.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="CanvasLayer/Control2/MenuRect/VBoxContainer"]
margin_right = 239.0
margin_bottom = 68.0
rect_min_size = Vector2( 239, 68 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="CanvasLayer/Control2/MenuRect/VBoxContainer"]
margin_top = 93.0
margin_right = 239.0
margin_bottom = 161.0
rect_min_size = Vector2( 239, 68 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/Control2/MenuRect/VBoxContainer"]
margin_top = 186.0
margin_right = 239.0
margin_bottom = 254.0
rect_min_size = Vector2( 239, 68 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseRect" type="ColorRect" parent="CanvasLayer/Control2"]
visible = false
margin_right = 450.0
margin_bottom = 841.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control2/LoseRect"]
margin_left = 5.0
margin_top = 110.0
margin_right = 449.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Ship destroyed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="CanvasLayer/Control2/LoseRect"]
margin_top = 170.0
margin_right = 450.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_fonts/font = SubResource( 14 )
text = "123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiPointLabel" type="Label" parent="CanvasLayer/Control2/LoseRect"]
margin_top = 220.0
margin_right = 450.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_fonts/font = SubResource( 14 )
text = "123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/LoseRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.5
margin_top = -101.0
margin_right = 119.5
margin_bottom = 101.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="CanvasLayer/Control2/LoseRect/VBoxContainer"]
margin_right = 239.0
margin_bottom = 68.0
rect_min_size = Vector2( 239, 68 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="CanvasLayer/Control2/LoseRect/VBoxContainer"]
margin_top = 93.0
margin_right = 239.0
margin_bottom = 161.0
rect_min_size = Vector2( 0, 58 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/Control2/LoseRect/VBoxContainer"]
margin_top = 186.0
margin_right = 239.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 68 )
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartRec" type="ColorRect" parent="CanvasLayer/Control2"]
margin_left = 85.0
margin_top = 400.0
margin_right = 365.0
margin_bottom = 557.0
color = Color( 0.717647, 0.721569, 0.729412, 0.407843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control2/StartRec"]
margin_left = -1.18921
margin_top = -1.18918
margin_right = 278.811
margin_bottom = 58.8108
custom_fonts/font = SubResource( 15 )
text = "Hold to Fly
Swipe to lean"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer/Control2/StartRec"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0002
margin_top = 12.5
margin_right = 90.0002
margin_bottom = 59.5
custom_colors/font_color_focus = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color = Color( 0.780392, 0.796078, 0.898039, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0980392, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.180392, 0.141176, 0.301961, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startaudio" type="AudioStreamPlayer" parent="CanvasLayer/Control2/StartRec"]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -5.0

[node name="BlackHole" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 776.591 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -7.0

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -7.0

[connection signal="health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BuffTimer" to="." method="_on_BuffTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_Buttonpause_pressed"]
[connection signal="button_pressed" from="CanvasLayer/Control2/MenuRect" to="." method="_on_MenuRect_button_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/MenuRect/VBoxContainer/ResumeButton" to="CanvasLayer/Control2/MenuRect" method="_on_ResumeButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/MenuRect/VBoxContainer/ResumeButton" to="CanvasLayer/Control2/MenuRect" method="_on_ResumeButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/MenuRect/VBoxContainer/HomeButton" to="CanvasLayer/Control2/MenuRect" method="_on_HomeButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/MenuRect/VBoxContainer/HomeButton" to="CanvasLayer/Control2/MenuRect" method="_on_HomeButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/MenuRect/VBoxContainer/QuitButton" to="CanvasLayer/Control2/MenuRect" method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/MenuRect/VBoxContainer/QuitButton" to="CanvasLayer/Control2/MenuRect" method="_on_QuitButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/LoseRect/VBoxContainer/RetryButton" to="." method="_on_RetryButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/LoseRect/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/LoseRect/VBoxContainer/HomeButton" to="." method="_on_HomeButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/LoseRect/VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control2/LoseRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control2/LoseRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control2/StartRec/StartButton" to="." method="_on_Button_pressed"]
